reemplazo de una v por otra

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,5 +1,6 @@
 <html>
     <head>Titulo post</head>
+    <link rel="stylesheet" href="./css/estilo.css"/> 
     <body>
         <h1>MI blog post</h1>
         <p>bla bla contenido</p>
