cambios de gatos

--- a/blogpost.html
+++ b/blogpost.html
@@ -4,5 +4,7 @@
     <body>
         <h1>MI blog post</h1>
         <p>bla bla contenido</p>
+
+        <p class="yellow">mi gata es fastidiosa</p>
     </body>
 </html>
