finalizada cabecera azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -2,6 +2,7 @@
     <head>Titulo post</head>
     <link rel="stylesheet" href="./css/estilo.css"/> 
     <body>
+        <div class="cabecera">Cabecera</div>
         <h1>MI blog post</h1>
         <p>bla bla contenido</p>
 
