--- a/blogpost.html
+++ b/blogpost.html
@@ -3,5 +3,9 @@
     <body>
         <h1>MI blog post</h1>
         <p>bla bla contenido</p>
+        <p>Estoy aprendiendo git o mas bien refrescando las cositas qe se de GIT, espero que funcione,
+            stoy aprendiendo git o mas bien refrescando las cositas qe se de GIT, espero que funcione
+            stoy aprendiendo git o mas bien refrescando las cositas qe se de GIT, espero que funcione
+        </p>
     </body>
 </html>
