--- a/blogpost.html
+++ b/blogpost.html
@@ -3,7 +3,7 @@
     <link rel="stylesheet" href="./css/estilo.css"/> 
     <body>
         <div class="cabecera">Cabecera</div>
-        <h1>MI blog post ssh</h1>
+        <h1>MI blog post ssh crenaof tag</h1>
         <p>bla bla contenido</p>
         <p>Estoy aprendiendo git o mas bien refrescando las cositas qe se de GIT, espero que funcione,
             stoy aprendiendo git o mas bien refrescando las cositas qe se de GIT, espero que funcione
