--- a/blogpost.html
+++ b/blogpost.html
@@ -2,6 +2,7 @@
     <head>Titulo post</head>
     <link rel="stylesheet" href="./css/estilo.css"/> 
     <body>
+        <img src="imagenes/logo.jpg" width="80"/>
         <div class="cabecera">Cabecera</div>
         <h1>MI blog post ssh crenaof tag</h1>
         <p>bla bla contenido</p>
